Update Menu Aesthetic; Add Menu Arrows

--- a/react-app/src/projects.css
+++ b/react-app/src/projects.css
@@ -66,6 +66,10 @@
 
 
 .grid-element-container:hover{
+    /*transform: rotate3d(0,1,0,180deg);*/
+}
+
+.grid-element-container.touch{
     transform: rotate3d(0,1,0,180deg);
 }
 
