--- a/react-app/src/menu-style.css
+++ b/react-app/src/menu-style.css
@@ -155,6 +155,29 @@
   opacity: 1 !important;
 }*/
 
+.arrow{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  filter:invert(1);
+  text-transform: none;
+  opacity: 0.5;
+  display:none;
+}
+.arrow img{
+  align-self: flex-start;
+  width: 2rem;
+  height: 2rem;
+  order:2;
+}
+.arrow span{
+  font-size: 1rem;
+  color:black;
+  align-self: flex-end;
+}
+
 .socials-menu{
   animation:fadein 2s ease-in-out;
   transition: 300ms ease-in-out;
@@ -167,7 +190,7 @@
   align-self: center;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  /*position: absolute;*/
   z-index: 4;
   filter:grayscale(0);
   margin-right: 0.5rem;
