--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -84,15 +84,16 @@ code {
 #root{
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100vw;
+  height: 100%;
   scroll-behavior: smooth; 
   overflow-x: hidden;
 }
 
 @media only screen and (min-width: 600px) {
   #root{
-    height: 100%;
+
   }
 }
 
